--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/admin/js/app.js": "/admin/js/app.js",
-    "/admin/css/app.css": "/admin/css/app.css"
+    "/admin/js/app.js": "/admin/js/app.js?id=f1bb0fb778adc1a67661",
+    "/admin/css/app.css": "/admin/css/app.css?id=f7c173d88c920857601b"
 }
