--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "webpack-cli": "^4.5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^27.0.0",
         "webpack": "^5.27.1"
     }
 }
