--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+        "clientjs": "^0.1.11",
         "webpack": "^5.27.1"
     }
 }
