--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,10 @@
 {
-    "/admin/desktop/js/app.js": "/admin/desktop/js/app.js?id=177c4ff6339ef2c22f0f",
-    "/admin/mobile/js/app.js": "/admin/mobile/js/app.js?id=9eea0d6ee11b85e82d20",
-    "/front/desktop/js/app.js": "/front/desktop/js/app.js?id=505e1adfc58bc7eda1e2",
-    "/front/mobile/js/app.js": "/front/mobile/js/app.js?id=0ab45a412f41df9f84cf",
+    "/admin/desktop/js/app.js": "/admin/desktop/js/app.js?id=15b7af99c7748fdb14e0",
+    "/admin/mobile/js/app.js": "/admin/mobile/js/app.js?id=cc0f4e804a1222063834",
+    "/front/desktop/js/app.js": "/front/desktop/js/app.js?id=aa7431a832f0314a7ad5",
+    "/front/mobile/js/app.js": "/front/mobile/js/app.js?id=68e13fbb0012cbb3d1c7",
+    "/front/mobile/css/app.css": "/front/mobile/css/app.css?id=392bad58ef0c24a14e26",
+    "/front/desktop/css/app.css": "/front/desktop/css/app.css?id=0f045bb73df93dace177",
     "/admin/mobile/css/app.css": "/admin/mobile/css/app.css?id=b5c85670393180f1843a",
-    "/admin/desktop/css/app.css": "/admin/desktop/css/app.css?id=119039c569a0da09e846",
-    "/front/desktop/css/app.css": "/front/desktop/css/app.css?id=bdc9ba322ea6d4bfdf97",
-    "/front/mobile/css/app.css": "/front/mobile/css/app.css?id=392bad58ef0c24a14e26"
+    "/admin/desktop/css/app.css": "/admin/desktop/css/app.css?id=b6afed4f677bd97d401a"
 }
