--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1",
-        "webpack-cli": "^4.5.0"
+        "webpack-cli": "^4.7.0"
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^27.0.0",
         "clientjs": "^0.1.11",
+        "nested-sort": "^5.0.0",
         "webpack": "^5.27.1"
     }
 }
