--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,10 @@
 {
-    "/admin/desktop/js/app.js": "/admin/desktop/js/app.js?id=da774d583150dd007443",
-    "/admin/mobile/js/app.js": "/admin/mobile/js/app.js?id=cc0f4e804a1222063834",
-    "/front/desktop/js/app.js": "/front/desktop/js/app.js?id=aa7431a832f0314a7ad5",
-    "/front/mobile/js/app.js": "/front/mobile/js/app.js?id=68e13fbb0012cbb3d1c7",
+    "/admin/desktop/js/app.js": "/admin/desktop/js/app.js?id=33e4fdb44c6f5db2636b",
+    "/admin/mobile/js/app.js": "/admin/mobile/js/app.js?id=9eea0d6ee11b85e82d20",
+    "/front/desktop/js/app.js": "/front/desktop/js/app.js?id=dd5e9b638ae7e46e52e2",
+    "/front/mobile/js/app.js": "/front/mobile/js/app.js?id=0ab45a412f41df9f84cf",
     "/front/mobile/css/app.css": "/front/mobile/css/app.css?id=1c4cd037712838a2b910",
+    "/front/desktop/css/app.css": "/front/desktop/css/app.css?id=be30e51f22be05d7cae2",
     "/admin/mobile/css/app.css": "/admin/mobile/css/app.css?id=b5c85670393180f1843a",
-    "/admin/desktop/css/app.css": "/admin/desktop/css/app.css?id=4245f239332d4e40d501",
-    "/front/desktop/css/app.css": "/front/desktop/css/app.css?id=5cfabfa6f94994ad153d"
+    "/admin/desktop/css/app.css": "/admin/desktop/css/app.css?id=4245f239332d4e40d501"
 }
