--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "jcupitt/vips": "^1.0",
+        "jcupitt/vips" : "1.0.7",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.12",
         "laravel/horizon": "^5.7",
